# emu6510

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  emu6510.sln  emu6510.sln.DotSettings
Emu6510.Application/: Application.cpp  CMakeLists.txt  Emu6510.Application.vcxproj  Emu6510.Application.vcxproj.filters  application.h  framework.h  pch.h
Emu6510.Debugger/: Emu6510.Debugger.vcxproj  Emu6510.Debugger.vcxproj.filters  api.h  debugger.h  exported_api.cpp  exported_api.h  pch.h
Emu6510.Debugger.Application/: App.xaml  App.xaml.cs  AutofacModule.cs  Emu6510.Debugger.Application.csproj  IResolverProxy.cs  ResolverProxy.cs  RootDataContext.cs
Emu6510.Debugger.Application/Bridge/: AutofacModule.cs  Debugger.cs  IDebugger.cs  Instruction.cs
Emu6510.Debugger.Application/Properties/: Annotations.cs  launchSettings.json
Emu6510.Debugger.Application/Ui/: AutofacModule.cs  Styles.xaml  ViewModelBase.cs
Emu6510.Debugger.Application/Ui/CodeView/: DesignViewModel.cs  IInstructionDecoder.cs  IViewModel.cs  Instruction.cs  InstructionDecoder.cs  View.xaml  View.xaml.cs  ViewModel.cs
Emu6510.Debugger.Application/Ui/Infrastructure/: DialogService.cs  IDialogService.cs  IDialogViewModel.cs  RelayCommand.cs  RelayCommandOfT.cs
Emu6510.Debugger.Application/Ui/MainWindow/: DesignViewModel.cs  IViewModel.cs  View.xaml  View.xaml.cs  ViewModel.cs
Emu6510.Debugger.Application/Ui/OffsetDialog/: DesignViewModel.cs  IViewModel.cs  View.xaml  View.xaml.cs  ViewModel.cs
Emu6510.Debugger.Application/Ui/ProcessorView/: DesignViewModel.cs  IViewModel.cs  View.xaml  View.xaml.cs  ViewModel.cs
Emu6510.Library/: CMakeLists.txt  Emu6510.Library.vcxproj  Emu6510.Library.vcxproj.filters  adc.h  api.h  beq.h  bits.h  cpu.h  decode_internal.h  framework.h  inc.h  instrfetch.cpp  instrfetch.h  instruction.cpp  instruction.h  instructions.h  invalid_op.h  lda.h  memory.h  nop.h  opcodes.h  pch.h
Emu6510.Tests/: CMakeLists.txt  Emu6510.Tests.vcxproj  Emu6510.Tests.vcxproj.filters  adc.cpp  beq.cpp  inc.cpp  lda.cpp  nop.cpp  pch.h  setup.h  tests.cpp  tests.h
